# sertis_submit

myproject/: README.md  docker-compose.yml  main.py  pyproject.toml
myproject/output/: part-00000-a79f2a1e-084f-4ecf-83f9-85b664891d30-c000.csv
